# acontrol

./: CMakeLists.txt  package.xml
launch/: bebop_control.launch  pioneer_p3dx_control.launch
src/: acontrol_arm.cpp  arduino_control.cpp  dokku_arm_control.cpp  image_filter.cpp  mx_arm_control.cpp  pioneer_p3dx_control.cpp  pioneer_p3dx_control_simm.cpp  pro_arm_control.cpp  pro_control_sdk.cpp  pro_control_sdk.hpp  pro_control_sdk_sp.cpp  pro_control_sdk_sp.hpp  single_motor_joy_control.cpp  summit_control.cpp  uav_control.cpp
src/old/: acontrol.cpp  acontrolfuncionacon qrmark.cpp  braq (copy).cpp  braq.cpp  braqall.cpp  control (copy).cpp  control.cpp  ed_traj_arm (copy).cpp  ed_traj_arm.cpp  ed_traj_arm_quad.cpp  edarm.cpp  edarm.h  edtrajectory (another copy).h  edtrajectory (copy).cpp  edtrajectory (copy).h  edtrajectory.cpp  edtrajectory.h  edtrajectoryfuncionaconqrmark.cpp  movedd.cpp  sedtrajectory (copy).cpp  sedtrajectory.cpp
